<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:weightSum="9.0"
    xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:background="#ff222222" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <TextView android:textSize="50.0sp" android:textColor="#ffffffff" android:orientation="horizontal" android:id="@+id/display" android:background="@android:color/black" android:paddingLeft="10.0dip" android:paddingTop="2.0dip" android:layout_width="fill_parent" android:layout_height="65.0dip" android:ems="10" android:layout_weight="4.0" />
    <LinearLayout android:textColor="#ffffffff" android:gravity="center_horizontal" android:orientation="horizontal" android:background="#ff000000" android:layout_width="fill_parent" android:layout_height="50.0dip" android:weightSum="4.0" android:layout_weight="1.0">
        <Button android:textSize="26.0sp" android:textColor="#ffff7800" android:id="@+id/ClearAll" android:background="@drawable/button_black" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/ClearAll" android:layout_weight="1.0" android:onClick="clickAC" />
        <ToggleButton android:gravity="center" android:layout_gravity="center" android:orientation="horizontal" android:id="@+id/toggleBtn" android:background="@color/transparent" android:paddingLeft="200.0dip" android:paddingTop="200.0dip" android:paddingRight="200.0dip" android:paddingBottom="200.0dip" android:layout_width="0.0dip" android:layout_height="fill_parent" android:checked="true" android:button="@drawable/toggle_button_sound" android:textOn="@null" android:textOff="@null" android:layout_weight="1.0" />
        <Button android:textSize="22.0sp" android:textColor="#ffff7800" android:id="@+id/Modulo" android:background="@drawable/button_black" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="Mod" android:layout_weight="1.0" android:onClick="clickModulo" />
        <Button android:textSize="30.0sp" android:textColor="#ffff7800" android:id="@+id/Multiply" android:background="@drawable/button" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="×" android:layout_weight="1.0" android:onClick="clickMultiply" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="50.0dip" android:weightSum="4.0" android:layout_weight="1.0">
        <Button android:textSize="30.0sp" android:textColor="#ffffffff" android:id="@+id/Seven" android:background="@drawable/button_black" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/Seven" android:layout_weight="1.0" android:onClick="clickSeven" />
        <Button android:textSize="30.0sp" android:textColor="#ffffffff" android:id="@+id/Eight" android:background="@drawable/button_black" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/Eight" android:layout_weight="1.0" android:onClick="clickEight" />
        <Button android:textSize="30.0sp" android:textColor="#ffffffff" android:id="@+id/Nine" android:background="@drawable/button_black" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/Nine" android:layout_weight="1.0" android:onClick="clickNine" />
        <Button android:textSize="30.0sp" android:textColor="#ffff7800" android:id="@+id/Divide" android:background="@drawable/button" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/Divide" android:layout_weight="1.0" android:onClick="clickDivide" />
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent" android:layout_height="50.0dip" android:weightSum="4.0" android:layout_weight="1.0">
        <Button android:textSize="30.0sp" android:textColor="#ffffffff" android:id="@+id/Four" android:background="@drawable/button_black" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/Four" android:layout_weight="1.0" android:onClick="clickFour" />
        <Button android:textSize="30.0sp" android:textColor="#ffffffff" android:id="@+id/Five" android:background="@drawable/button_black" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/Five" android:layout_weight="1.0" android:onClick="clickFive" />
        <Button android:textSize="30.0sp" android:textColor="#ffffffff" android:id="@+id/Six" android:background="@drawable/button_black" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/Six" android:layout_weight="1.0" android:onClick="clickSix" />
        <Button android:textSize="30.0sp" android:textColor="#ffff7800" android:id="@+id/Subtract" android:background="@drawable/button" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="－" android:layout_weight="1.0" android:onClick="clickSubtract" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="50.0dip" android:weightSum="4.0" android:layout_weight="1.0">
        <Button android:textSize="30.0sp" android:textColor="#ffffffff" android:id="@+id/One" android:background="@drawable/button_black" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/One" android:layout_weight="1.0" android:onClick="clickOne" />
        <Button android:textSize="30.0sp" android:textColor="#ffffffff" android:id="@+id/Two" android:background="@drawable/button_black" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/Two" android:layout_weight="1.0" android:onClick="clickTwo" />
        <Button android:textSize="30.0sp" android:textColor="#ffffffff" android:id="@+id/Three" android:background="@drawable/button_black" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/Three" android:layout_weight="1.0" android:onClick="clickThree" />
        <Button android:textSize="30.0sp" android:textColor="#ffff7800" android:id="@+id/Add" android:background="@drawable/button" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="+" android:layout_weight="1.0" android:onClick="clickAdd" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="50.0dip" android:weightSum="4.0" android:layout_weight="1.0">
        <Button android:textSize="30.0sp" android:textColor="#ffffffff" android:id="@+id/Zero" android:background="@drawable/button_black" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/Zero" android:layout_weight="1.0" android:onClick="clickZero" />
        <Button android:textSize="30.0sp" android:textColor="#ffffffff" android:id="@+id/FullStop" android:background="@drawable/button_black" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/FullStop" android:layout_weight="1.0" android:onClick="clickFullStop" />
        <ImageButton android:id="@+id/Set" android:background="@drawable/button_black" android:layout_width="0.0dip" android:layout_height="fill_parent" android:src="@drawable/ic_set" android:scaleType="center" android:layout_weight="1.0" android:onClick="clickSet" />
        <Button android:textSize="30.0sp" android:textColor="#ffffffff" android:id="@+id/Equal" android:background="@drawable/button_orange" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/Equal" android:layout_weight="1.0" android:onClick="clickEqual" />
    </LinearLayout>
</LinearLayout>